# helix-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yaml
config/: dev.toml
migrations/2020-09-07-174757_create_users/: up.sql
migrations/2020-09-07-231827_create_users/: up.sql
src/: actions.rs  api_error.rs  app.rs  database.rs  err.rs  main.rs  schema.rs
src/app/admin/: mod.rs  routes.rs  users.rs
src/apps/admin/: routes.rs
src/gateway/: mod.rs
src/model/: user.rs
src/shared/: mod.rs  user.rs
src/shared/gateway/: database.rs
src/users/: model.rs  routes.rs
