[package]
name = "helix"
version = "0.1.0"
authors = ["nickgarfield <ntgarfield@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.7.4"
actix-web = "2.0"
actix-rt = "1.0"
bcrypt = "0.2.0"
chrono = { version = "0.4.6", features = ["serde"] }
config = "0.10.1"
diesel = { version = "1.3.3", features = ["postgres", "uuid", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
env_logger = "0.7.1"
failure = "0.1.2"
frank_jwt = "3.0"
futures = "0.1"
log = "0.4.11"
r2d2 = "0.8.2"
serde_derive="1.0.79"
serde_json="1.0"
serde="1.0"
sparkpost = "0.4"
uuid = { version = "0.6.5", features = ["serde", "v4"] }
